Updated sort numbering in json and fixed overflow issue of landing page

--- a/public/_assets/listing-commands/css/marketing-steps-lc1.css
+++ b/public/_assets/listing-commands/css/marketing-steps-lc1.css
@@ -422,12 +422,12 @@ footer{
 body.just-listed .assets-steps .asset-container > a{
 	display: flex;
 }
+body.just-listed .assets-steps .asset-container[data-title="Social Story 8"] > a,
 body.just-listed .assets-steps .asset-container[data-title="Social Story 9"] > a,
 body.just-listed .assets-steps .asset-container[data-title="Social Story 10"] > a,
 body.just-listed .assets-steps .asset-container[data-title="Social Story 11"] > a,
 body.just-listed .assets-steps .asset-container[data-title="Social Story 12"] > a,
-body.just-listed .assets-steps .asset-container[data-title="Social Story 13"] > a,
-body.just-listed .assets-steps .asset-container[data-title="Social Story 14"] > a
+body.just-listed .assets-steps .asset-container[data-title="Social Story 13"] > a
 {
 	min-height: 9.375rem;
 }
@@ -508,12 +508,12 @@ body.just-listed .assets-steps .asset-container[data-title="Social Story 14"] > 
 	.assets-steps .asset-container[data-title="Door Hanger Invites"] > .overlap > a > img{
 		max-height: 120px !important;
 	}
+	body.just-listed .assets-steps .asset-container[data-title="Social Story 8"] > a,
 	body.just-listed .assets-steps .asset-container[data-title="Social Story 9"] > a,
 	body.just-listed .assets-steps .asset-container[data-title="Social Story 10"] > a,
 	body.just-listed .assets-steps .asset-container[data-title="Social Story 11"] > a,
 	body.just-listed .assets-steps .asset-container[data-title="Social Story 12"] > a,
-	body.just-listed .assets-steps .asset-container[data-title="Social Story 13"] > a,
-	body.just-listed .assets-steps .asset-container[data-title="Social Story 14"] > a
+	body.just-listed .assets-steps .asset-container[data-title="Social Story 13"] > a
 	{
 		min-height: 7.5rem !important;
 	}
